# super_agent_book

./: .gitignore  README.md  README_EN.md  memory.json  out.json
RAG_智能客服与知识问答/: README.md
a2a/: README.md  pyproject.toml  requirements.txt  run.sh
a2a/a2a_demo/: bus.py  main.py
a2a/a2a_demo/agents/: base.py  researcher.py  supervisor.py  writer.py
a2a/a2a_demo/tools/: file_search.py  rag.py
a2a/agents/: classifier_agent.py  collector_agent.py  summarizer_agent.py  translator_agent.py
a2a/clients/: 01_sequential.py  02_parallel.py  03_conditional.py  04_pipeline.py
a2a/data/docs/: eor_basics.txt  peo_differences.txt  smb_tips.txt
a2a/output/: report-20250919-164558.md  transcript-20250919-164558.txt
a2a/tests/: test_flow.py
a2a_agents/: README.md  requirements.txt
ai_creative_workshop/: README.md  main.py  requirements.txt
business_report_self_evolve_search/: README.md
business_report_workshop/: main.py  requirements.txt
code_agent/: README.md  orchestrator.py  requirements.txt
doc_agent/: README.md  requirements.txt
doc_assistant_full/: requirements.txt
edu_english_agent_memory_personal/: README_AI_Enhanced.md
edu_grading_assistant/: main.py  (+1 more)
mcp/: README.md  pyproject.toml  requirements.txt
mcp/client/: demo_client.py  openai_client.py
mcp/sample_data/: README.txt  hello.txt
mcp/src/mcp_demo/: server.py
编程智能体/: .gitignore  README.md  pyproject.toml
编程智能体/smartcoder/: analyzer.py  cli.py  diff_utils.py  editor.py  llm.py  planner.py  workspace.py
编程智能体/smartcoder_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+239 files in other folders)
