[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-demo"
version = "0.1.0"
description = "Minimal Agent-to-Agent (A2A) collaboration demo in pure Python"
authors = [{name = "A2A Demo"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
a2a-demo = "a2a_demo.main:cli"
