[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-demo"
version = "0.1.0"
description = "Educational MCP (Model Context Protocol) demo: a FastMCP server + minimal client"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="MCP Demo"}]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
mcp-demo-server = "mcp_demo.server:main"
